public/qteach-styles.css
body{
    background-color: rgb(32, 125, 206);
}

/*A container with horizontally centered components*/
.h-centered-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

#qt-avatar {
    position: relative;
    width: 33%;
    aspect-ratio: 1;
    margin-top: 10px;
    margin-bottom: 15px;
    
}

#avatar-background {
    position: absolute;
    width: 100%;
    height: 100%;
    bottom: 0px;
    background-color: rgb(140, 200, 240);
    border-radius: 50%;
    border: 8px;
    box-sizing: border-box;

}

#qt-face {
    content: url("/qt_faces/neutral_blinking.gif");
    position: absolute;
    width: 65%;
    height: auto;
    top: 33%;
    
}

#qt-upper-torso {
    content: url("/qt_upper_torso.png");
    position: absolute;
    width: 80%;
    height: auto;
    bottom: 8px;
}

#qt-skull {
    content: url("/qt_skull.png");
    position: absolute;
    width: 90%;
    height: auto;
    bottom: 17%;
    
}

#avatar-border {
    position: absolute;
    width: 100%;
    height: 100%;
    bottom: 0;
    border-radius: 50%;
    border: 6px solid rgb(10, 35, 140);
    box-sizing: border-box;

}

.text-input-field {
    color: black;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 1.2em;
    background-color: rgb(150, 150, 150);
    resize: none;
    width: 90%;
    padding: 10px;
    border: 3px solid rgb(0, 0, 0);
    border-radius: 15px;
    outline: none;
}

#chat-history {
    color: rgb(255, 255, 255);
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 1.2em;
    background-color: rgb(117, 116, 116);
    resize: none;
    width: 90%;
    aspect-ratio: 4;
    padding: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
    border: 3px solid rgb(0, 0, 0);
    border-radius:15px;
    margin-top: 20px;
    overflow-y: auto;

}

#chat-history > div {
    display: flex;
    
}

#chat-history > div > span {
    margin: 5px;
    margin-left: 0px;
    font-weight: bold;
    
}

#chat-history > div > p {
    margin: 5px;
    overflow-wrap: anywhere;
    
}

.rounded-button {
    background-color: rgb(76, 175, 80);
    color: white;
    padding: 10px 20px;
    margin-bottom: 10px;
    font-size: 16px;
    border: none;
    border-radius: 20px;
    cursor: pointer;
    transition: background 0.3s;

}

